added the first blog

--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second git repository</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h3>This is heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque corrupti esse voluptas ut, nobis, vitae illum velit illo beatae, quisquam quos repellat dicta nihil consequuntur. Blanditiis distinctio sequi laudantium! Voluptatem.</p>
+    </div>
 </body>
 </html>
