--- a/index2.html
+++ b/index2.html
@@ -11,5 +11,13 @@
         <h3>This is heading</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque corrupti esse voluptas ut, nobis, vitae illum velit illo beatae, quisquam quos repellat dicta nihil consequuntur. Blanditiis distinctio sequi laudantium! Voluptatem.</p>
     </div>
+    <div>
+        <h3>This is heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque corrupti esse voluptas ut, nobis, vitae illum velit illo beatae, quisquam quos repellat dicta nihil consequuntur. Blanditiis distinctio sequi laudantium! Voluptatem.</p>
+    </div>
+    <div>
+        <h3>This is heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque corrupti esse voluptas ut, nobis, vitae illum velit illo beatae, quisquam quos repellat dicta nihil consequuntur. Blanditiis distinctio sequi laudantium! Voluptatem.</p>
+    </div>
 </body>
 </html>
