--- a/index2.html
+++ b/index2.html
@@ -19,5 +19,9 @@
         <h3>This is heading</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque corrupti esse voluptas ut, nobis, vitae illum velit illo beatae, quisquam quos repellat dicta nihil consequuntur. Blanditiis distinctio sequi laudantium! Voluptatem.</p>
     </div>
+    <div>
+        <h2>LOrem Ipsum dollar</h2>
+        <img src="wallpaper.jpg" alt="">
+    </div>
 </body>
 </html>
